src/test/deca/syntax/invalid/created/FloatOverflow.deca
// Description:
//    tests de programme incorrect syntaxiquement (valeur trop grande)
//
// Resultats:
//    ligne 7 : Erreur, Float Overflow
{
    float a = 1.4E41;
}